// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button States Has a disabled state 1`] = `
.emotion-12 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-1 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  color: rgb(255,255,255);
  background-color: rgb(179,211,233);
  box-shadow: inset 0 0 0 0.125rem rgb(179,211,233);
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: rgb(255,255,255);
}

.emotion-1:hover,
.emotion-1:active {
  background-color: rgb(179,211,233);
  box-shadow: inset 0 0 0 0.125rem rgb(179,211,233);
}

.emotion-3 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background-color: rgb(255,255,255);
  color: rgb(179,211,233);
  box-shadow: inset 0 0 0 0.125rem rgb(179,211,233);
  width: auto;
}

.emotion-3::-moz-focus-inner {
  border: none;
}

.emotion-5 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background-color: rgb(226,37,37);
  color: rgb(255,255,255);
  box-shadow: inset 0 0 0 0.125rem rgb(226,37,37);
  background-color: rgb(236,182,182);
  box-shadow: inset 0 0 0 0.125rem rgb(236,182,182);
  width: auto;
}

.emotion-5::-moz-focus-inner {
  border: none;
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  color: rgb(255,255,255);
}

.emotion-7 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background: none;
  color: rgb(236,182,182);
  width: auto;
}

.emotion-7::-moz-focus-inner {
  border: none;
}

.emotion-9 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background: none;
  color: rgb(179,211,233);
  width: auto;
}

.emotion-9::-moz-focus-inner {
  border: none;
}

.emotion-11 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  width: auto;
}

.emotion-11::-moz-focus-inner {
  border: none;
}

<div
  className="emotion-12"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-3"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-5"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-7"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-9"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-11"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button States Has a loading state 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-30 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-4 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  color: rgb(255,255,255);
  width: auto;
}

.emotion-4::-moz-focus-inner {
  border: none;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  color: rgb(255,255,255);
}

.emotion-4,
.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus {
  background-color: rgb(3,44,94);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94);
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 0;
}

.emotion-3 {
  box-sizing: border-box;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 14px;
}

.emotion-2 {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  opacity: 1;
  -webkit-transition: opacity 250ms cubic-bezier(0.215,0.61,0.355,1);
  transition: opacity 250ms cubic-bezier(0.215,0.61,0.355,1);
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

@media screen and (prefers-reduced-motion:reduce) {
  .emotion-2 {
    -webkit-animation: none;
    animation: none;
  }
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.25rem;
  height: 1.25rem;
  color: currentColor;
}

.emotion-9 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background-color: rgb(255,255,255);
  color: rgb(3,44,94);
  background-color: rgb(220,234,244);
  box-shadow: inset 0 0 0 0.125rem rgb(220,234,244);
  width: auto;
}

.emotion-9::-moz-focus-inner {
  border: none;
}

.emotion-14 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background-color: rgb(226,37,37);
  color: rgb(255,255,255);
  box-shadow: inset 0 0 0 0.125rem rgb(226,37,37);
  background-color: rgb(96,1,1);
  box-shadow: inset 0 0 0 0.125rem rgb(96,1,1);
  width: auto;
}

.emotion-14::-moz-focus-inner {
  border: none;
}

.emotion-14:hover,
.emotion-14:focus,
.emotion-14:active {
  color: rgb(255,255,255);
}

.emotion-19 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background: none;
  color: rgb(146,18,0);
  width: auto;
}

.emotion-19::-moz-focus-inner {
  border: none;
}

.emotion-24 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background: none;
  color: rgb(3,44,94);
  width: auto;
}

.emotion-24::-moz-focus-inner {
  border: none;
}

.emotion-29 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  width: auto;
}

.emotion-29::-moz-focus-inner {
  border: none;
}

<div
  className="emotion-30"
>
  <button
    aria-busy="true"
    className="emotion-4"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
    <span
      className="emotion-3"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          display="inline-flex"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="1"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="1"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-9"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
    <span
      className="emotion-3"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          display="inline-flex"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="2"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="2"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-14"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
    <span
      className="emotion-3"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          display="inline-flex"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="3"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="3"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-19"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
    <span
      className="emotion-3"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          display="inline-flex"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="4"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="4"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-24"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
    <span
      className="emotion-3"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          display="inline-flex"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="5"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="5"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-29"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
    <span
      className="emotion-3"
    >
      <div
        className="emotion-2"
        size="sizeIcon20"
      >
        <span
          className="emotion-1"
          display="inline-flex"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="6"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="6"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a destructive variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-1 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: rgb(226,37,37);
  color: rgb(255,255,255);
  box-shadow: inset 0 0 0 0.125rem rgb(226,37,37);
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:focus,
.emotion-1:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: rgb(255,255,255);
}

.emotion-1:hover {
  background-color: rgb(96,1,1);
  box-shadow: inset 0 0 0 0.125rem rgb(96,1,1);
}

.emotion-1:focus {
  background-color: rgb(226,37,37);
  box-shadow: inset 0 0 0 0.125rem rgb(96,1,1), 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active {
  background-color: rgb(146,18,0);
  box-shadow: inset 0 0 0 0.125rem rgb(96,1,1), 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={false}
    onClick={[Function]}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Delete
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a destructive_link variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-1 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: rgb(226,37,37);
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:focus,
.emotion-1:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover {
  color: rgb(178,6,0);
}

.emotion-1:active {
  color: rgb(146,18,0);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={false}
    onClick={[Function]}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Undo
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a link variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-1 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: rgb(0,94,166);
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:focus,
.emotion-1:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1:hover {
  color: rgb(0,62,130);
}

.emotion-1:active {
  color: rgb(3,44,94);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={false}
    onClick={[Function]}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Go to Paste
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a primary variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-1 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: rgb(255,255,255);
  background-color: rgb(2,122,197);
  box-shadow: inset 0 0 0 0.125rem rgb(2,122,197);
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:focus,
.emotion-1:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: rgb(255,255,255);
}

.emotion-1:hover {
  background-color: rgb(3,44,94);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94);
}

.emotion-1:focus {
  background-color: rgb(2,122,197);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94), 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active {
  background-color: rgb(0,62,130);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94), 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={false}
    onClick={[Function]}
    size="default"
    type="submit"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a reset variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-1 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:focus,
.emotion-1:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={false}
    onClick={[Function]}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Hello World!
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a secondary variant 1`] = `
.emotion-2 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-1 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: rgb(255,255,255);
  color: rgb(0,94,166);
  background-color: rgb(255,255,255);
  box-shadow: inset 0 0 0 0.125rem rgb(2,122,197);
  width: auto;
}

.emotion-1::-moz-focus-inner {
  border: none;
}

.emotion-1:focus,
.emotion-1:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  color: rgb(3,44,94);
  background-color: rgb(245,248,255);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94);
}

.emotion-1:focus {
  color: rgb(3,44,94);
  background-color: rgb(245,248,255);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94), 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1:active {
  color: rgb(3,44,94);
  background-color: rgb(220,234,244);
  box-shadow: inset 0 0 0 0.125rem rgb(3,44,94), 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-2"
>
  <button
    aria-busy="false"
    className="emotion-1"
    disabled={false}
    onClick={[Function]}
    size="default"
    type="button"
  >
    <span
      className="emotion-0"
    >
      Submit
    </span>
  </button>
</div>
`;
